<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.AlertsFragment">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_sent_only"
        android:layout_width="186dp"
        android:layout_height="36dp"
        android:text="@string/successfully_sent"
        app:layout_constraintBottom_toBottomOf="@+id/button_refresh_alerts"
        app:layout_constraintEnd_toStartOf="@+id/button_refresh_alerts"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_refresh_alerts"
        app:layout_constraintVertical_bias="0.666" />

    <ImageButton
        android:id="@+id/button_refresh_alerts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:src="@drawable/ic_refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar_alerts"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_view_alerts"
        app:layout_constraintEnd_toEndOf="@+id/recycler_view_alerts"
        app:layout_constraintStart_toStartOf="@+id/recycler_view_alerts"
        app:layout_constraintTop_toTopOf="@+id/recycler_view_alerts" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_alerts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/recycler_view_border"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/date_buttons_layout_alerts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_refresh_alerts"
        tools:listitem="@layout/item_alert_event" />

    <LinearLayout
        android:id="@+id/date_buttons_layout_alerts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_today_alerts"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/today" />

        <Button
            android:id="@+id/button_yesterday_alerts"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/yesterday" />

        <Button
            android:id="@+id/button_select_date_alerts"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/select_date" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>